# G3_BackEndPython

./: .gitignore  README.md  api_examples.py  comuna_service.py  config.py  domain.py  main.py  models.py  postgres_connection.py  pyproject.toml  requirements.txt  utils.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0155c7ec244f_008_data_tipo_medida.py  16824aeabebe_011_data_planes.py  23133f86f05c_001_initial_migration.py  23133f86f05c_initial_migration.py  5667d95f3ff7_005_data_regiones.py  7046fcb232e8_003_data_organismos_sectoriales.py  850c776a830d_004_data_usuarios.py  bb8a13e92836_010_data_opcion.py  c967157be38e_006_data_comunas.py  (+6 more)
app/: config.py  main.py
db/: database.py  models.py
examples/: comuna_post.json  medida_post.json  opcion_medida_post.json  organismo_sectorial_post.json  region_post.json  tipo_dato_post.json  tipo_medida_post.json  usuario_post.json
routes/: auth.py  comunas.py  frecuencias.py  opciones.py  opciones_medidas.py  organismos_sectoriales.py  planes.py  planes_comuna.py  planes_medidas.py  regiones.py  reportes.py  rol.py  roles.py  tipo_medidas.py  tipo_usuarios.py  tipos_datos.py  usuarios.py
shared/: dependencies.py  enums.py  schemas.py  utils.py
tests/: test_auth.py  test_comunas.py  test_frecuencia.py  test_frecuencias.py  test_main.py  test_opciones.py  test_opciones_medidas.py  test_plancomuna.py  test_planes.py  test_planes_comuna.py  test_planes_medidas.py  test_regiones.py  test_reportes.py  test_roles.py  test_tipo_medidas.py  test_tipodato.py  test_tipos_datos.py  test_usuarios.py
(+33 files in other folders)
